Updates for JDK11