@@ -65,7 +65,7 @@
     <errorprone.version>2.3.1</errorprone.version>
     <google-java-format.version>1.6</google-java-format.version>
     <jmh.version>1.21</jmh.version>
-    <nullaway.version>0.5.5</nullaway.version>
+    <nullaway.version>0.5.6</nullaway.version>
     <spotbugs.version>3.1.7</spotbugs.version>
   </properties>
 
@@ -108,6 +108,17 @@
         <version>${dropwizard.version}</version>
         <type>pom</type>
         <scope>import</scope>
+      </dependency>
+      <dependency>
+        <groupId>com.google.guava</groupId>
+        <artifactId>guava</artifactId>
+        <version>26.0-jre</version>
+        <exclusions>
+          <exclusion>
+            <groupId>com.google.code.findbugs</groupId>
+            <artifactId>jsr305</artifactId>
+          </exclusion>
+        </exclusions>
       </dependency>
     </dependencies>
   </dependencyManagement>
@@ -253,7 +264,6 @@
         <version>3.0.1</version>
         <configuration>
           <additionalOptions>
-            <option>--add-modules=java.xml.ws.annotation</option>
             <option>-html5</option>
           </additionalOptions>
         </configuration>
@@ -318,6 +328,13 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-dependency-plugin</artifactId>
         <version>3.1.1</version>
+        <dependencies>
+          <dependency>
+            <groupId>org.ow2.asm</groupId>
+            <artifactId>asm</artifactId>
+            <version>6.2</version>
+          </dependency>
+        </dependencies>
         <executions>
           <execution>
             <id>analyze</id>
